force-app/main/default/objects/copado__Selenium_Locator_Reference__c/fields/copado__Selenium_Locator__c.field-meta.xml
<CustomField>
    <fullName>copado__Selenium_Locator__c</fullName>
    <label>Selenium Locator</label>
    <referenceTo>copado__Selenium_Locator__c</referenceTo>
    <relationshipLabel>Selenium Locator References</relationshipLabel>
    <relationshipName>Selenium_Locator_References</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>