force-app/main/default/objects/copado__Selenium_Locator_Reference__c/fields/copado__Selenium_Test_Case__c.field-meta.xml
<CustomField>
    <fullName>copado__Selenium_Test_Case__c</fullName>
    <label>Selenium Test Case</label>
    <referenceTo>copado__Selenium_Test_Case__c</referenceTo>
    <relationshipLabel>Selenium Locator References</relationshipLabel>
    <relationshipName>Selenium_Locator_References</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>