force-app/main/default/objects/copado__Selenium_Locator_Reference__c/fields/copado__Selenium_Test_Case_Version__c.field-meta.xml
<CustomField>
    <fullName>copado__Selenium_Test_Case_Version__c</fullName>
    <formula>copado__Selenium_Test_Case__r.copado__Version__c</formula>
    <label>Selenium Test Case Version</label>
    <type>Text</type>
</CustomField>